[tool.poetry]
name = "basilisp-pprint"
version = "0.1.1"
description = ""
authors = ["ikappaki <ikappaki@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "basilisp_pprint", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
basilisp = ">=0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
